--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
+# OpenAI API配置
+OPENAI_API_KEY=your-api-key-here
+OPENAI_MODEL_NAME=gpt-4o
+# 如果使用自定义API端点，取消注释并修改URL
+# OPENAI_BASE_URL=https://your-custom-endpoint.com/v1
+
+# MCP服务器配置
+MCP_CONFIG_PATH=mcp-servers.json
+MCP_SERVER_NAME=common-api-server
 
 LLM_API_KEY=<your-llm-api-key>
 LLM_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
