--- a/weather-mcp-client/requirements.txt
+++ b/weather-mcp-client/requirements.txt
@@ -1,4 +1,29 @@
-mcp[cli]>=1.2.0
+# MCP客户端基础依赖
+aiofiles>=0.8.0
+jsonschema>=4.17.3
+python-dotenv>=0.21.0
+python-dateutil>=2.8.2
+pyyaml>=6.0
+model-context-protocol>=1.2.0
+mcp>=1.2.0
+
+# LangChain相关依赖
+langchain>=0.1.0
+langchain-core>=0.1.0
+langchain-openai>=0.0.5
+langchain-community>=0.0.20
+langchain-mcp-adapters>=0.0.7
+langchain-mcp-tools>=0.0.2
+
+# OpenAI接口支持
+openai>=1.6.0
+
+# 异步和工具支持
 httpx>=0.27.0
-asyncio>=3.4.3
-openai>=1.5.0 
+asyncio
+colorama>=0.4.6
+rich>=13.3.5
+
+# 可视化支持
+matplotlib>=3.7.1
+pandas>=2.0.3
